# chaivision-assessment

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
analysis/: compare.py
bot/: app.py  indexer.py  prompts.py  qwen_service.py  schemas.py  utils.py
config/: __init__.py  logger.py  settings.py
html_snapshots/: product_B08DKQ3JG1.html  product_B09JBCSC7H.html  product_B0DNZ3GPB8.html  search_massage gun.html  search_monitor light bar.html  search_walking pad.html
scrape/: __init__.py  exporter.py  fetcher.py  logger.py  parsers.py  scrape.py
